--- a/PioneerModel/p3dx_description/package.xml
+++ b/PioneerModel/p3dx_description/package.xml
@@ -10,6 +10,9 @@
   <license>GPLv3</license>
   <url>https://github.com/RafBerkvens/ua_ros_p3dx</url>
 
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_runtime</run_depend>
+  
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
